# mcp-shell

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mcp_shell_server_fixed.py  package.json  pyproject.toml  requirements.txt
config/: config.dev.yaml  config.yaml  connectors.yaml
connectors/nodejs/: example-connector.js  package.json
connectors/python/: example_connector.py
dxt-package/: MCP_SHELL_INSTALL_GUIDE.md  RELEASE_NOTES_v1.3.1.md  manifest.json
dxt-package/server/: README.md  mcp_shell_server.py  mcp_shell_server_fixed.py  pyproject.toml  requirements_minimal.txt  run_mcp_gateway.py
dxt-package/server/src/: __init__.py
dxt-package/server/src/connectors/applescript/: connector.py
dxt-package/server/src/connectors/applescript/connectors/contacts/: __init__.py
dxt-package/server/src/connectors/applescript/connectors/terminal/: __init__.py  connector.py
dxt-package/server/src/connectors/chrome_extension/: connector.py
dxt-package/server/src/connectors/gateway_utils/: connector.py
dxt-package/server/src/connectors/hello_world/: __init__.py  connector.py
dxt-package/server/src/connectors/shell/: connector.py
dxt-package/server/src/core/: config.py  embeddings.py  entities_memory_integration.py  google_oauth_service.py  memory_service.py  oauth_mixin.py  registry.py  vector_embeddings.py
dxt-package/server/src/core/adaptive/: __init__.py  integrated_manager.py  simple_manager.py
dxt-package/server/src/core/events/: event_bus.py  models.py
dxt-package/server/src/prompt_training/: README.md  __init__.py  evaluation.py  prompt_manager.py  prompt_trainer.py
dxt-package/server/src/rest_api/: __init__.py  server.py
dxt-package/server/src/rest_api/auth/: dependencies.py
dxt-package/server/src/rest_api/routers/: mcp.py
dxt-package/server/src/rest_api/services/: mcp_service.py
dxt-package/server/src/templates/: automation_templates.py  meta_templates.py
dxt-package/server/src/unified_backend/: auto_start.py  enhanced_server.py  main.py  mcp_integration.py  oauth_wellknown.py
src/: __init__.py  mcp_gateway.py
src/connectors/applescript/: __init__.py
src/connectors/applescript/connectors/contacts/: connector.py
src/connectors/applescript/connectors/finder/: __init__.py  connector.py
src/connectors/applescript/connectors/messages/: __init__.py  connector.py
src/connectors/chrome/: __init__.py  connector.py
src/connectors/chrome_extension/: __init__.py
src/connectors/gateway_utils/: __init__.py
src/connectors/shell/: __init__.py
src/core/: __init__.py  auth_manager.py  base_connector.py  base_connector.py.pre-prompts  entity_indexing_service.py  env_config.py  error_handling.py  logging_config.py  mem0_service.py  models.py  oauth_callback_server.py  resource_models.py
src/core/adaptive/: manager.py
src/core/events/: __init__.py  integration.py  task_queue.py
src/prompt_training/: auto_trainer.py  cli.py  feedback_collector.py  integration.py  models.py
src/rest_api/: main.py
src/templates/: __init__.py  base_templates.py  browser_templates.py  shell_templates.py
src/unified_backend/: __init__.py  event_server.py  oauth_integration.py  oauth_simple.py  server.py
tests/: README.md  __init__.py  conftest.py
tests/unit/connectors/hello_world/: test_hello_world_connector.py
tests/unit/connectors/shell/: test_shell_connector.py
tests/unit/core/: test_base_connector.py  test_config.py  test_modern_shell_connector.py  test_registry.py  test_registry_simple.py
